--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@ const pages={
   gcloud        :{api:'https://status.cloud.google.com/incidents.json',link:'https://status.cloud.google.com',cors:true,google:true},
   webflow       :{api:'https://status.webflow.com/api/v2/summary.json',link:'https://status.webflow.com'},
   notion        :{api:'https://status.notion.so/api/v2/summary.json',link:'https://status.notion.so'},
-  gohighlevel  :{api:'https://api.pulsetic.com/public/status/status.gohighlevel.com',link:'https://status.gohighlevel.com',pulsetic:true},
-  zapier        :{api:'https://status.zapier.com/api/v2/summary.json',link:'https://status.zapier.com'}
+  gohighlevel   :{api:'https://api.pulsetic.com/public/status/status.gohighlevel.com',link:'https://status.gohighlevel.com',pulsetic:true},
+  zapier        :{api:'https://status.zapier.com/api/v2/summary.json',link:'https://status.zapier.com'},
+  clicksend     :{api:'https://status.clicksend.com/api/v2/summary.json',link:'https://status.clicksend.com'},
+  leadpages     :{api:'https://status.leadpages.com/api/v2/summary.json',link:'https://status.leadpages.com'},
+  circle        :{api:'https://status.circle.so/api/v2/summary.json',link:'https://status.circle.so'}
 };
 const cors=u=>`https://corsproxy.io/?${encodeURIComponent(u)}`;
 
