--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@ const pages={
   clicksend     :{api:'https://status.clicksend.com/api/v2/summary.json',link:'https://status.clicksend.com'},
   leadpages     :{api:'https://status.leadpages.com/api/v2/summary.json',link:'https://status.leadpages.com'},
   circle        :{api:'https://status.circle.so/api/v2/summary.json',link:'https://status.circle.so'},
-  pipedrive     :{api:'https://status.pipedrive.com',link:'https://status.pipedrive.com',sorry:true,cors:true}
+  pipedrive     :{api:'https://status.pipedrive.com',link:'https://status.pipedrive.com',sorry:true,cors:true},
+  anthropic     :{api:'https://status.anthropic.com/api/v2/summary.json',   link:'https://status.anthropic.com'},
+  openai        :{api:'https://status.openai.com/api/v2/summary.json',      link:'https://status.openai.com'}
 };
 const cors=u=>`https://corsproxy.io/?${encodeURIComponent(u)}`;
 
