--- a/index.html
+++ b/index.html
@@ -119,51 +119,48 @@ function parseSorry(html) {
  *      (heuristique simple ; complète‑la au fil du temps)
  ************************************************************/
   
-async function autoDetect(url){
-  
-  const origin=new URL(url).origin;
+async function autoDetect(pageURL){
+  const origin = new URL(pageURL).origin;
 
-   /* ——— 1.  Google Cloud  ——— */
-   if (/status\.cloud\.google\.com/.test(origin)){
-       return { api:'https://status.cloud.google.com/incidents.json',
-                google:true, cors:true };
-   }
-  
-   /* ——— 2.  Google Workspace ——— */
-   if (/appsstatus\/dashboard/.test(url)){
-       return { api:'https://www.google.com/appsstatus/dashboard/incidents.json',
-                google:true, cors:true };
-   }
-  
-  /* 1.  on tente Instatus -------------------------------- */
-  if(/instatus/i.test(origin)) return {api:origin+'/summary.json',instatus:true};
+  /* 1 ▸ cas explicites --------------------------------- */
+  if (/status\.cloud\.google\.com/.test(origin))
+      return { api:'https://status.cloud.google.com/incidents.json',
+               google:true, cors:true };
 
-  /* 1‑bis ▸ Incident.io  (test JSON avant de lire le HTML) */
-  try {
-    const r = await fetch(cors(origin + '/summary.json'));
-    if (r.ok) {
-      await r.clone().json();              // ← s’assure que c’est bien du JSON
-      return { api: origin + '/summary.json',
-               incidentio:true,
-               cors:true };
-    }
-  } catch(_) { /* on tentera autre chose plus bas */ }
+  if (/appsstatus\/dashboard/.test(pageURL))
+      return { api:'https://www.google.com/appsstatus/dashboard/incidents.json',
+               google:true, cors:true };
 
-  /* 2.  on télécharge la page (si CORS permis) ----------- */
-  let html='';
-  try{html=await fetch(cors(url)).then(r=>r.text())}catch(e){}
+  if (/instatus/i.test(origin))
+      return { api:origin + '/summary.json', instatus:true };
 
-  /* SorryApp                                             */
-  if (/sorry-app|notice__title/i.test(html)){
-    return { api: pageURL, sorry:true, cors:true };
-  }
+  /* 2 ▸ Incident.io (Linear, Vercel…) ------------------- */
+  try{
+     const r = await fetch(cors(origin + '/summary.json'));
+     if (r.ok) {                     // JSON trouvé → driver « incidentio »
+        return { api:origin + '/summary.json', incidentio:true, cors:true };
+     }
+  }catch{/* ignore */}
 
-  /* Pulsetic                                             */
-  if(/js\/app\./i.test(html)&&!/pulsetic\.com/.test(origin))
-    return {api:'https://api.pulsetic.com/public/status/'+new URL(url).hostname,pulsetic:true};
+  /* 3 ▸ on récupère 1× le HTML -------------------------- */
+  let html = '';
+  try{ html = await fetch(cors(pageURL)).then(r=>r.text()); }catch{/* CORS */ }
 
-  /* Atlassian Statuspage (fallback)                      */
-  return {api:origin+'/api/v2/summary.json'};
+  if (/sorry-app|notice__title/i.test(html))
+      return { api:pageURL, sorry:true, cors:true };
+
+  if (/js\/app\./.test(html) && !/pulsetic\.com/.test(origin))
+      return { api:'https://api.pulsetic.com/public/status/' + new URL(pageURL).hostname,
+               pulsetic:true };
+
+  /* 4 ▸ Atlassian – seulement si le JSON existe --------- */
+  try{
+     const r = await fetch(cors(origin + '/api/v2/summary.json'));
+     if (r.ok) return { api:origin + '/api/v2/summary.json' };
+  }catch{/* 404 ? 403 ? */}
+
+  /* 5 ▸ dernier recours : SorryApp derrière un pare‑feu  */
+  return { api:pageURL, sorry:true, cors:true };
 }
 
 /************************************************************
